<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/brown"
  android:padding="25dp">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="50dp"
    android:textAlignment="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="40dp"
    />

  <EditText
    android:id="@+id/etPlayer1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/player_1"
    android:layout_marginBottom="20dp"
    />

  <EditText
    android:id="@+id/etPlayer2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/player_2"
    android:layout_marginBottom="50dp"
    />

  <Button
    android:id="@+id/btnTwoPlayers"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/two_players"
    />

</LinearLayout>
