<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:padding="15dp"
    android:background="@color/darkblue">
    <ImageButton
      android:id="@+id/btn_menu"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:background="@color/darkblue"
      android:src="@drawable/arrow_left"
      android:scaleType="fitCenter"
      android:layout_centerVertical="true"
      />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/options"
      android:textColor="@color/white"
      android:textSize="20sp"
      android:layout_centerInParent="true"
      />
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:text="@string/option_back"
      />
    <Switch
      android:id="@+id/switch_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_alignParentEnd="true"
      />
  </RelativeLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="50dp"
    android:paddingLeft="50dp">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/option_color_title"
      android:layout_marginBottom="20dp"
      />
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
          android:id="@+id/radio_classic"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:text="@string/option_color_classic"
          android:tag="CLASSIC"/>
        <RadioButton
          android:id="@+id/radio_custom"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/option_color_custom"
          android:tag="CUSTOM"/>
      </RadioGroup>

      <GridLayout
        android:id="@+id/classic_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:columnCount="2"
        android:rowCount="2">
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/brown"/>
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/beige"/>
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/beige"/>
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/brown"/>
      </GridLayout>

      <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/classic_board"
        android:columnCount="2"
        android:rowCount="2">
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/darkblue"/>
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/grayblue"/>
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/grayblue"/>
        <RelativeLayout
          android:layout_height="15dp"
          android:layout_width="15dp"
          android:background="@color/darkblue"/>
      </GridLayout>
    </RelativeLayout>
  </LinearLayout>

  <Button
    android:id="@+id/btn_save"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:theme="@style/DarkblueButton"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:text="@string/save"
    />


</LinearLayout>
